--- a/index.css
+++ b/index.css
@@ -30,3 +30,13 @@
     text-align: center;
     margin: 10px;
 }
+.skeleton-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.skeleton{
+    width: 200px;
+    height: 300px;
+    background-color: #f0f0f0f0;
+    margin: 10px;
+}
